Scheda_Presentazione_Di_Luca.html

--- a/Scheda_Presentazione_Di_Luca.html
+++ b/Scheda_Presentazione_Di_Luca.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -21,10 +21,10 @@
     <p>Dopo il diploma mi piacerebbe proseguire con studi più avanzati e parallelamente lavorare per poter coltivare le mie passioni.</p>
     <p>La mia principale aspirazione lavorativa sarebbe quella di lavorare nel campo dello sviluppo software, se possibile in ambito automobilistico.</p>
     <br>
-    <p>Frase: "You raise the blinds say, "Let's have light on life;
+    <b>Frase:</b>
+    <p>"You raise the blinds say, "Let's have light on life;
     Let's watch it fall apart.""</p>
     <p><i>("Apri la finestra ed esclami: "Lascia che la luce brilli sulla tua vita; Osservala mentre cade a pezzi."")</i></p>
     <img src="TDB.jpg">
 </body>
 </html>
-
