HùTMLLinkPage_Di_Luca.html

--- a/HTMLLinkPage_Di_Luca.html
+++ b/HTMLLinkPage_Di_Luca.html
@@ -60,15 +60,15 @@
         <a href="https://www.w3schools.com/css/default.asp"&gt; Sito del mio prof.</a>
     </p>
     <p>
-        Sito utile 9
+        Sito del mio prof
         <a href="https://www.marcopalladino.it"&gt; Sito del mio prof.</a>
     </p>
     <p>
-        Sito utile 10
+        Sito del mio prof            
         <a href="https://www.marcopalladino.it"&gt; Sito del mio prof.</a>
     </p>
     <p>
-        Sito utile 10
+        Sito del mio prof
         <a href="https://www.marcopalladino.it"&gt; Sito del mio prof.</a>
     </p>
 
