--- a/HTMLLinkPage_Di_Luca.html
+++ b/HTMLLinkPage_Di_Luca.html
@@ -28,16 +28,16 @@
     <p>
         Il mio sito di riferimento è:
        
-        <a href="https://www.w3schools.com/html/default.asp"&gt; Il mio libro di HTML</a>
+        <a href="https://www.w3schools.com/html/default.asp"> Il mio libro di HTML</a>
    
     </p>
     <p>
         Sito utile 2
-        <a href="https://www.marcopalladino.it"&gt; Sito del mio prof.</a>
+        <a href="https://www.marcopalladino.it"> Sito del mio prof.</a>
     </p>
     <p>
         Classroom di TPSIT
-        <a href="https://classroom.google.com/c/NzE0MTI0NTE2NDQ3"&gt;</a>
+        <a href="https://classroom.google.com/c/NzE0MTI0NTE2NDQ3">Classroom di TPSIT</a>
     </p>
     <p>
         Youtube
