HTMLLinkPage_Di_Luca.html

--- a/HTMLLinkPage_Di_Luca.html
+++ b/HTMLLinkPage_Di_Luca.html
@@ -32,7 +32,7 @@
    
     </p>
     <p>
-        Sito utile 2
+        Sito del mio prof
         <a href="https://www.marcopalladino.it"> Sito del mio prof.</a>
     </p>
     <p>
