HTMLLinkPage_Di_Luca.html

--- a/HTMLLinkPage_Di_Luca.html
+++ b/HTMLLinkPage_Di_Luca.html
@@ -32,44 +32,44 @@
    
     </p>
     <p>
-        Sito del mio prof
+        Sito del mio prof: 
         <a href="https://www.marcopalladino.it"> Sito del mio prof.</a>
     </p>
     <p>
-        Classroom di TPSIT
+        Classroom di TPSIT: 
         <a href="https://classroom.google.com/c/NzE0MTI0NTE2NDQ3">Classroom di TPSIT</a>
     </p>
     <p>
-        Youtube
-        <a href="https://www.youtube.com/"&gt; Sito del mio prof.</a>
+        Youtube: 
+        <a href="https://www.youtube.com/">Youtube</a>
     </p>
     <p>
-        HTML Color Picker
-        <a href="https://www.google.com/search?q=html+color+picker&rlz=1C1ONGR_itIT1133&oq=html+color+picker&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgcIARAAGIAEMgcIAhAAGIAEMgcIAxAAGIAEMgcIBBAAGIAEMgcIBRAAGIAEMgcIBhAAGIAEMgcIBxAAGIAEMgcICBAAGIAEMgcICRAAGIAE0gEIMjExOWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8"&gt; Sito del mio prof.</a>
+        HTML Color Picker:
+        <a href="https://www.google.com/search?q=html+color+picker&rlz=1C1ONGR_itIT1133&oq=html+color+picker&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgcIARAAGIAEMgcIAhAAGIAEMgcIAxAAGIAEMgcIBBAAGIAEMgcIBRAAGIAEMgcIBhAAGIAEMgcIBxAAGIAEMgcICBAAGIAEMgcICRAAGIAE0gEIMjExOWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">HTML Color Picker</a>
     </p>
     <p>
         GitHub
-        <a href="https://github.com/SydBarrett67"&gt; Sito del mio prof.</a>
+        <a href="https://github.com/SydBarrett67">GitHub</a>
     </p>
     <p>
         Google Drive
-        <a href="https://drive.google.com/drive/home"&gt; Sito del mio prof.</a>
+        <a href="https://drive.google.com/drive/home">Google Drive</a>
     </p>
     <p>
         CSS Tutorial
-        <a href="https://www.w3schools.com/css/default.asp"&gt; Sito del mio prof.</a>
+        <a href="https://www.w3schools.com/css/default.asp">CSS W3School</a>
     </p>
     <p>
         Sito del mio prof
-        <a href="https://www.marcopalladino.it"&gt; Sito del mio prof.</a>
+        <a href="https://www.marcopalladino.it">Sito del mio prof.</a>
     </p>
     <p>
         Sito del mio prof            
-        <a href="https://www.marcopalladino.it"&gt; Sito del mio prof.</a>
+        <a href="https://www.marcopalladino.it"></a>
     </p>
     <p>
         Sito del mio prof
-        <a href="https://www.marcopalladino.it"&gt; Sito del mio prof.</a>
+        <a href="https://www.marcopalladino.it"></a>
     </p>
 
 </div>
