--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #d1b199;
 }
 
 .topnav {
@@ -25,8 +26,8 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #3d3d3c;
+  color: white;
 }
 
 .topnav a.active {
