--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #d1b199;
+  background-color: #6f7aad;
 }
 
 .topnav {
@@ -75,7 +75,7 @@ body {
 </div>
 
 <div style="padding-left:16px">
-  <h2>Responsive Topnav Example</h2>
+  <h2>Esercizi dell'anno scolastico 2024/2025</h2>
   <p>Resize the browser window to see how it works.</p>
 </div>
 
