--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,11 +7,14 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: beige;
 }
 
 .topnav {
   overflow: hidden;
   background-color: #333;
+  margin: auto;
+  border-radius: 15px;
 }
 
 .topnav a {
@@ -26,12 +29,12 @@ body {
 }
 
 .topnav a:hover {
-  background-color: white;
-  color: black;
+  background-color: #801616;
+  color: white;
 }
 
 .topnav a.active {
-  background-color: #0f1a2b;
+  background-color: #801616;
   color: white;
 }
 
@@ -67,16 +70,15 @@ body {
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
   <a href="#news">News</a>
-  <a href="menu_esercizi.htm">Esercizi Html/css</a>
-  <a href="aboutme.htm">Autore Marco</a>
+  <a href="menu_esercizi.htm">Esercizi HTML/CSS</a>
+  <a href="https://sydbarrett67.github.io/TPSIT-2024/Scheda_Presentazione_Di_Luca.html">Alessandro Di Luca</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
 </div>
 
-<div style="padding-left:16px">
-  <h2>Responsive Topnav Example</h2>
-  <p>Resize the browser window to see how it works.</p>
+<div style="text-align: center; padding: 15px; border:5px solid black; border-radius: 25px; margin: auto; width: 550px; margin-top: 50px">
+  <h2>Esercizi svolti nell'anno scolastico 2024/2025</h2>
 </div>
 
 <script>
