--- a/index.html
+++ b/index.html
@@ -126,14 +126,22 @@ body {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="https://sydbarrett67.github.io/TPSIT-2024/CSS_Di_Luca.html">CSS1</a>
-      <a href="https://sydbarrett67.github.io/TPSIT-2024/CSS_Di_Luca2.html">CSS2</a>
-      <a href="https://sydbarrett67.github.io/TPSIT-2024/FlipCard_Di_Luca.html">FlipCard</a>
-      <a href="https://sydbarrett67.github.io/TPSIT-2024/HTMLLinkPage.html">10 Link</a>
-      <a href="https://sydbarrett67.github.io/TPSIT-2024/div_annidati_Di_Luca.html">Div Annidati</a>
+      <a href="https://sydbarrett67.github.io/TPSIT-2024/CSS_Di_Luca.html" target="_blank">CSS1</a>
+      <a href="https://sydbarrett67.github.io/TPSIT-2024/CSS_Di_Luca2.html" target="_blank">CSS2</a>
+      <a href="https://sydbarrett67.github.io/TPSIT-2024/FlipCard_Di_Luca.html" target="_blank">FlipCard</a>
+      <a href="https://sydbarrett67.github.io/TPSIT-2024/HTMLLinkPage.html" target="_blank">10 Link</a>
+      <a href="https://sydbarrett67.github.io/TPSIT-2024/div_annidati_Di_Luca.html" target="_blank">Div Annidati</a>
 
     </div>
-  </div> 
+  </div>   
+<div class="dropdown">
+    <button class="dropbtn">Esercizi Javascript 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+
+    </div>
+  </div>
   <a href="https://sydbarrett67.github.io/TPSIT-2024/Scheda_Presentazione_Di_Luca.html">Alessandro Di Luca</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
