--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-
+        <a href="https://sydbarett67.github.io/TPSIT-2024/JS_Di_Luca.html">JS 1</a>
     </div>
   </div>
   <a href="https://sydbarrett67.github.io/TPSIT-2024/Scheda_Presentazione_Di_Luca.html">Alessandro Di Luca</a>
