--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ body {
     </button>
     <div class="dropdown-content">
         <a href="https://sydbarrett67.github.io/TPSIT-2024/JS_Di_Luca.html" target="_blank">JS 1</a>
+        <a href="https://sydbarrett67.github.io/TPSIT-2024/JS2_Di_Luca.html" target="_blank">JS 2</a>
     </div>
   </div>
   <a href="https://sydbarrett67.github.io/TPSIT-2024/Scheda_Presentazione_Di_Luca.html">Alessandro Di Luca</a>
