--- a/JS2_Di_Luca.html
+++ b/JS2_Di_Luca.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div id="center">
-        <input id="text" type="text" placeholder="Inserire il messaggio desiderato">">
+        <input id="text" type="text" placeholder="Inserire il messaggio desiderato">"
         <button class="button1" onclick="inputFunc()">Output</button>
     </div>
 
