--- a/JS2_Di_Luca.html
+++ b/JS2_Di_Luca.html
@@ -55,7 +55,7 @@
     <script>
         function inputFunc() {
           var x = document.getElementById("text").value;
-          alert(x);
+          alert("L'utente ha inserito: "+x);
         }
     </script>
 </body>
