--- a/JS2_Di_Luca.html
+++ b/JS2_Di_Luca.html
@@ -22,6 +22,7 @@
       border-radius: 15px;
       box-shadow: 0 9px 10px #525252;
       margin: auto;
+      transition-duration: 0.5;
     } 
     .button1:hover {background-color: #4a0d04}
     .button1:active {
