--- a/JS4.html
+++ b/JS4.html
@@ -59,7 +59,9 @@
 
     
         function calcola() {
-            elementOut.innerHTML = "Negro";
+            let v1=document.getElementById("Val1").value;
+            let v2=document.getElementById("Val2").value;
+            elementOut.innerHTML = "Negro!"+" "+v1*v2;
         }
     
     </script>
