--- a/JS3_Di_Luca.html
+++ b/JS3_Di_Luca.html
@@ -11,6 +11,8 @@
     #box {
         color:brown;
         border: 2px solid beige;
+        border-radius: 25px;
+        padding: 15px;
         left: 50%;
         font-size: 18px;
     }
