--- a/morraBot.html
+++ b/morraBot.html
@@ -95,6 +95,7 @@
     function sasso() {
         if (out=="sasso") {
             document.getElementById("condizioni").innerHTML = "Parità.";
+            document.getElementById("outPla").src
         }
         if (out=="carta") {
             document.getElementById("condizioni").innerHTML = "Hai perso.";
