--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ body {
         <a href="https://sydbarrett67.github.io/TPSIT-2024/JS4.html" target="_blank">JS 4</a>
         <a href="https://sydbarrett67.github.io/TPSIT-2024/JS5_Di_Luca.html" target="_blank">JS 5</a>
         <a href="https://sydbarrett67.github.io/TPSIT-2024/JS6_Di_Luca.html" target="_blank">JS 6</a>
+        <a href="https://sydbarrett67.github.io/TPSIT-2024/morraPlaVsBot.html" target="_blank">Morra Giocatore vs. Bot</a>
     </div>
   </div>
   <a href="https://sydbarrett67.github.io/TPSIT-2024/Scheda_Presentazione_Di_Luca.html">Alessandro Di Luca</a>
