--- a/morraPlaVsBot.html
+++ b/morraPlaVsBot.html
@@ -52,14 +52,14 @@
             color: white;
         }
         #outBot {
-            height: 250px;
-            width: 250px;
+            height: 20%;
+            width: 20%;
             border: 5px solid brown;
             border-radius: 25px;
         }
         #outPla {
-            height: 250px;
-            width: 250px;
+            height: 20%;
+            width: 20%;
             border: 5px solid brown;
             border-radius: 25px;
         }
