--- a/morraPlaVsBot.html
+++ b/morraPlaVsBot.html
@@ -50,6 +50,7 @@
             background: rgba(0, 0, 0, 0.7);
             padding: 25px;
             color: white;
+            height: 50%;
         }
         #outBot {
             height: 30%;
