--- a/morraPlaVsBot.html
+++ b/morraPlaVsBot.html
@@ -50,17 +50,16 @@
             background: rgba(0, 0, 0, 0.7);
             padding: 25px;
             color: white;
-            height: 450px;
         }
         #outBot {
-            height: 30%;
-            width: 30%;
+            height: 300px;
+            width: 300px;
             border: 5px solid brown;
             border-radius: 25px;
         }
         #outPla {
-            height: 30%;
-            width: 30%;
+            height: 300px;
+            width: 300px;
             border: 5px solid brown;
             border-radius: 25px;
         }
