--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@ body {
         <a href="https://sydbarrett67.github.io/TPSIT-2024/JS6_Di_Luca.html" target="_blank">JS 6</a>
         <a href="https://sydbarrett67.github.io/TPSIT-2024/morraPlaVsBot.html" target="_blank">Morra Giocatore vs. Bot</a>
         <a href="https://sydbarrett67.github.io/TPSIT-2024/arraycasuali.html" target="_blank">Array con generatore casuale</a>
+        <a href="https://sydbarrett67.github.io/TPSIT-2024/arraycasuali2.html" target="_blank">Array con generatore casuale e media</a>
     </div>
   </div>
   <a href="https://sydbarrett67.github.io/TPSIT-2024/Scheda_Presentazione_Di_Luca.html">Alessandro Di Luca</a>
