--- a/indexBaffo.html
+++ b/indexBaffo.html
@@ -28,10 +28,10 @@
           </div>
       </nav>
       <div class="container my-5 text-center" style="max-width: 700px;">
-          <h1>Baffo ha aperto un ristorante! Pronti per morire avvelenati!?</h1>
+          <h1>Baffo ha aperto un ristorante! Pronti??</h1>
           <p class="lead">...Hamburger e goloserie artigianali dal 26 Ottobre 2008! Venite a gustarli!</p>
           <button type="button" class="btn btn-primary btn-lg">Prenota ora!</button>
-          <button type="button" class="btn btn-danger btn-lg">Ammazzati!</button>
+          <button type="button" class="btn btn-danger btn-lg">Contattaci!</button>
       </div>
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="max-height: 500px;">
           <div class="carousel-indicators">
@@ -48,7 +48,7 @@
             <div class="carousel-item">
               <img src="slideshow_2.jpg" class="img-fluid d-block w-100" style="margin: auto;max-height: 500px; object-fit: cover;">
               <div class="carousel-caption d-none d-md-block">
-                <h3>"Il Lercio", prima del processo di baffizzazione.</h3>
+                <h3>"Il Grande".</h3>
               </div>
             </div>
           </div>
@@ -67,8 +67,8 @@
                 <div class="card" style="width: 25rem;background-image: url(bg_cards.jpg); background-size: 100%; border-radius: 30px;">
                     <img src="napipo.jpg" class="card-img-top" alt="..." style="border-radius: 30px; padding: 5px">
                     <div class="card-body">
-                        <h5 class="card-title">"Il Lercio."</h5>
-                        <p class="card-text">Goloso panino a base di topo morto recuperato dalla cantina di Baffo himself, +0,50₹ per l'aggiunta di calzini sporchi.</p>
+                        <h5 class="card-title">"Il Grande"</h5>
+                        <p class="card-text">Goloso panino a base di carne giapponese.</p>
                         <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                 </div>
@@ -77,8 +77,8 @@
                 <div class="card" style="width: 25rem;background-image: url(bg_cards.jpg); background-size: 100%; border-radius: 30px;">
                     <img src="napipo.jpg" class="card-img-top" alt="..." style="border-radius: 30px; padding: 5px">
                     <div class="card-body">
-                        <h5 class="card-title">"Il Lercio."</h5>
-                        <p class="card-text">Goloso panino a base di topo morto recuperato dalla cantina di Baffo himself, +0,50₹ per l'aggiunta di calzini sporchi.</p>
+                        <h5 class="card-title">"Il Grande"</h5>
+                        <p class="card-text">Goloso panino a base di carne giapponese.</p>
                         <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                 </div>
@@ -87,8 +87,8 @@
                 <div class="card" style="width: 25rem;background-image: url(bg_cards.jpg); background-size: 100%; border-radius: 30px;">
                     <img src="napipo.jpg" class="card-img-top" alt="..." style="border-radius: 30px; padding: 5px">
                     <div class="card-body">
-                        <h5 class="card-title">"Il Lercio."</h5>
-                        <p class="card-text">Goloso panino a base di topo morto recuperato dalla cantina di Baffo himself, +0,50₹ per l'aggiunta di calzini sporchi.</p>
+                        <h5 class="card-title">"Il Grande"</h5>
+                        <p class="card-text">Goloso panino a base di carne giapponese.</p>
                         <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                 </div>
