--- a/indexMenu.html
+++ b/indexMenu.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Baffo Sushi</title>
+    <title>Menù degli esercizi</title>
     <style>
         body {
             background-image:url("https://papers.co/wallpaper/papers.co-ne80-coding-screen-digital-art-dark-bw-35-3840x2160-4k-wallpaper.jpg");
