Update and rename indexMenu.html to index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </nav>
       <div class="container my-5 text-center" style="max-width: 1000px;">
-          <h1 style="margin-bottom: 50px;"><a href="https://sydbarrett67.github.io/TPSIT-2024/indexMenu.html">Alessandro Di Luca</a>, esercizi e progetti.</h1>
+          <h1 style="margin-bottom: 50px;"><a href="https://sydbarrett67.github.io/TPSIT-2024/indexEse.html">Alessandro Di Luca</a>, esercizi e progetti.</h1>
           <a href="https://github.com/SydBarrett67">
           <button type="button" class="btn btn-danger btn-lg">Il mio profilo GitHub!</button>
           </a>
