--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="max-height: 500px;min-width: 100%;">
         <div class="container">
             <a class="navbar-brand" href="https://it.wikipedia.org/wiki/Intelligenza_artificiale">
-              <img src="https://static.wikia.nocookie.net/disney/images/2/2b/Wall-E.png/revision/latest?cb=20180518165947&path-prefix=it" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+              <img src="https://static.wikia.nocookie.net/disney/images/2/2b/Wall-E.png/revision/latest?cb=20180518165947path-prefix=it" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
               L'intelligenza artificiale e la robotica
             </a>
           </div>
