--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Esempio Bootstrap</title>
+    <title>L'intelligenza Artificiale</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="max-height: 500px;min-width: 100%;">
         <div class="container">
             <a class="navbar-brand" href="https://it.wikipedia.org/wiki/Intelligenza_artificiale">
-              <img src="wall-e.jpg" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+              <img src="Wall-E.jpg" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
               L'intelligenza artificiale e la robotica
             </a>
           </div>
