--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -59,7 +59,7 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" >
         <div class="carousel-inner" style="min-width: 100%;">
           <div class="carousel-item active" style="object-fit: fill">
-            <img src="psych.jpg" class="d-block w-100" alt="..." style="max-height: 800px; min-height: 200px;">
+            <img src="psych.jpg" class="d-block w-100" alt="..." style="max-height: 800px; min-height: 200px;object-fit:contain">
             <div class="carousel-caption d-none d-md-block">
                 <h3>Immagine generata da AI.</h3>
               </div>
