--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Menù degli esercizi</title>
     <style>
         body {
-            background-image:url("https://papers.co/wallpaper/papers.co-ne80-coding-screen-digital-art-dark-bw-35-3840x2160-4k-wallpaper.jpg");
+            background-image:url("https://img.freepik.com/foto-premium/fondo-di-legno-nero-della-parete-struttura-del-legno-scuro-della-corteccia-vista-superiore-del-legname-del-grano_38607-596.jpg");
             background-size: 100%;
             color: whitesmoke;
         }
