--- a/test.html
+++ b/test.html
@@ -181,15 +181,15 @@
             Remaining time: <b id="timer">NaN</b> seconds.
         </div>
     </div>
-    <div class="container-fluid" style="max-width: 400px; margin-top: 30px;">
+    <div class="container-fluid" style="max-width: 600px; margin-top: 30px;">
         <div class="row">
-            <div class="col-3 col-lg-3 col-md-3 col-sm-1" style=" min-height: 100px;" onclick="cliccaCella(this, 0)"></div>
+            <div class="col-3 col-lg-3 col-md-3 col-sm-1" style=" min-height: ;" onclick="cliccaCella(this, 0)"></div>
             <div class="col-3 col-lg-3 col-md-3 col-sm-1" onclick="cliccaCella(this, 1)"></div>
             <div class="col-3 col-lg-3 col-md-3 col-sm-1" onclick="cliccaCella(this, 2)"></div>
             <div class="col-3 col-lg-3 col-md-3 col-sm-1" onclick="cliccaCella(this, 3)"></div>
         </div>
         <div class="row">
-            <div class="col-3 col-lg-3 col-md-3 col-sm-1" style="min-height: 100px;" onclick="cliccaCella(this, 4)"></div>
+            <div class="col-3 col-lg-3 col-md-3 col-sm-1" style="min-height: ;" onclick="cliccaCella(this, 4)"></div>
             <div class="col-3 col-lg-3 col-md-3 col-sm-1" onclick="cliccaCella(this, 5)"></div>
             <div class="col-3 col-lg-3 col-md-3 col-sm-1" onclick="cliccaCella(this, 6)"></div>
             <div class="col-3 col-lg-3 col-md-3 col-sm-1" onclick="cliccaCella(this, 7)"></div>
