--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
         .col-3 {
             transition: background-color 0.5s ease;
             border-radius: 20px;
+            height: 25%;
             border: 1px solid black; 
         }
         body {
