--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
         .col-3 {
             transition: background-color 0.5s ease;
             border-radius: 20px;
-            height: 25%;
+            height: 150px;
             border: 1px solid black; 
         }
         body {
