--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Millisecond Timer</title>
+    <title>Clicker Counter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJxvYbLQ4qgA0p8eRZsBd5aDZn0m6R3gxdu5Y04rEsZynJbHek0u7f+e/ZG9" crossorigin="anonymous">
     <style>
         #game-area {
