--- a/index.html
+++ b/index.html
@@ -163,6 +163,52 @@
         </div>
     </div>
 </div>
+
+<div class="container my-5 text-center">
+    <h1>Memory sequenziale con bootstrap e javascript.</h1>
+</div>
+<div class="row">
+    <div class="col-sm">
+        <div class="card" style="max-width: 50rem;background-color: #2e020a; background-size: 100%; border-radius: 30px;  color: whitesmoke; margin:auto; max-height: 800px;">
+            <img style="max-height: 20rem;object-fit: cover; border-radius: 30px; border-radius: 30px;" src="memory.png" class="card-img-top" alt="..." style="border-radius: 30px; padding: 5px">
+            <div class="card-body">
+                <h5 class="card-title">Memory sequenziale.</h5>
+                <a href="https://sydbarrett67.github.io/TPSIT-2024/test.html" target="_blank" class="btn btn-primary">Guarda!</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container my-5 text-center">
+    <h1>Intelligenza artificiale.</h1>
+</div>
+<div class="row">
+    <div class="col-sm">
+        <div class="card" style="max-width: 50rem;background-color: #2e020a; background-size: 100%; border-radius: 30px;  color: whitesmoke; margin:auto; max-height: 800px;">
+            <img style="max-height: 20rem;object-fit: cover; border-radius: 30px; border-radius: 30px;" src="ai.png" class="card-img-top" alt="..." style="border-radius: 30px; padding: 5px">
+            <div class="card-body">
+                <h5 class="card-title">Pagina informativa sull'AI.</h5>
+                <a href="https://sydbarrett67.github.io/TPSIT-2024/bootstrap2.html" target="_blank" class="btn btn-primary">Guarda!</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container my-5 text-center">
+    <h1>Generatore di frasi casuali.</h1>
+</div>
+<div class="row">
+    <div class="col-sm">
+        <div class="card" style="max-width: 50rem;background-color: #2e020a; background-size: 100%; border-radius: 30px;  color: whitesmoke; margin:auto; max-height: 800px;">
+            <img style="max-height: 20rem;object-fit: cover; border-radius: 30px; border-radius: 30px;" src="frasi.png" class="card-img-top" alt="..." style="border-radius: 30px; padding: 5px">
+            <div class="card-body">
+                <h5 class="card-title">Pagina informativa sull'AI.</h5>
+                <a href="https://sydbarrett67.github.io/TPSIT-2024/generatore.html" target="_blank" class="btn btn-primary">Guarda!</a>
+            </div>
+        </div>
+    </div>
+</div>
+<br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
 </html>
