--- a/task020425.html
+++ b/task020425.html
@@ -70,7 +70,7 @@
                 sum += arr[i];
             }
             let median = parseInt(sum / 50);
-            document.getElementById("mediaOut").textContent = "Media numeri da "+scala+" a "+(scala+50)+": "+median+"(su "+arr.size()+")";
+            document.getElementById("mediaOut").textContent = "Media numeri da "+scala+" a "+(scala+50)+": "+median+" (su "+arr.lenght+")";
         }
 
     </script>
