--- a/tetris_main.html
+++ b/tetris_main.html
@@ -15,6 +15,7 @@
                 background-size: cover;
                 color: white;
                 display: flex;
+                cursor: none;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
